# OpenSai

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  clean_all.sh  docker-compose.yaml  install_dependencies.sh  launch.sh  setup.sh  setup_unix.sh  setup_windows.sh  uninstall_core.sh
config_folder/main_configs/: double_panda.xml  single_panda.xml  single_panda_peg.xml
config_folder/robot_files/: allegro_hand.urdf  dog.urdf  iiwa7_plate.urdf  mobile_base.urdf  panda_arm_allegro.urdf  panda_arm_peg.urdf  tiltable_table.urdf
config_folder/world_files/: world_double_panda.urdf  world_fr3.urdf  world_kuka_cylinder.urdf  world_kuka_object_friction.urdf  world_kuka_tiltable_table.urdf  world_mobile_base.urdf  world_panda_allegro.urdf  world_single_panda.urdf  world_single_panda_gripper.urdf  world_single_panda_peg.urdf
config_folder/xml_config_files/: double_panda.xml  fr3.xml  fr3_control_only.xml  kuka_cylinder.xml  kuka_object_friction.xml  kuka_plate_table.xml  mobile_base.xml  panda_allegro.xml  single_panda.xml  single_panda_allegro.xml  single_panda_gripper.xml  single_panda_peg.xml
docker/: Dockerfile.opensai  Dockerfile.sai
docs/: data_logging.md  list_of_inputs_outputs.md  list_of_runtime_parameters.md
python_examples/: control_dog.py  control_robot.py  kuka_cylinder.py  kuka_move_object_with_friction.py  kuka_surface_alignment.py  maze.py  mazecfg.yaml  mobile_base_navigation.py  move.py  panda_allegro_allignment.py  panda_allegro_pick_place.py  panda_gripper_pick_place.py  panda_gripper_pick_place_side.py  panda_left_right.py  panda_push_boxes.py  reinforcement_notebook.ipynb  rlkeys.py  rlmodel.py  robot_control.py  sanity_test_rl.py
scripts/: build_OpenSai_main.sh  install_core_libraries.sh  install_dependencies.sh  launch.sh  tutorial_launch.sh  uninstall.sh  update_core_libraries.sh
src/: main.cpp
tutorials/: main_tutorials.cpp
tutorials/docs/: 1_pendulum.md  2_robot_arm.md  3_robot_arm_haptic.md
tutorials/python_scripts/: 2_robot_arm_left_right.py
tutorials/tuto_config_folder/robot_files/: pendulum.urdf
tutorials/tuto_config_folder/world_files/: 1_pendulum_world.urdf  2_robot_arm_world.urdf
tutorials/tuto_config_folder/xml_files/: 1_pendulum.xml  2_robot_arm.xml  3_robot_arm_haptic.xml
